quick bug fix remove too much css

--- a/src/Screens/Contact/Contact.css
+++ b/src/Screens/Contact/Contact.css
@@ -55,15 +55,6 @@
   font-size: 0.7em;
 }
 
-.socialLink:visited {
-  fill: $face-color;
-  cursor: pointer;
-}
-
-.socialLink:hover {
-  fill: $social-link-hover;
-}
-
 .social {
   display: flex;
   align-items: center;
